refactor(player_api): rename Player.icon_path to Player.player_icon_path
